Blog and Post page Finished

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <nav>
                 <ul>
                     <li> <a href="#home">Home</a> </li>
-                    <li> <a href="#home">About</a> </li>
-                    <li> <a href="#home">Cases</a> </li>
-                    <li> <a href="#home">Blog</a> </li>
-                    <li> <a href="#home">Contact</a> </li>
+                    <li> <a href="#about">About</a> </li>
+                    <li> <a href="#cases">Cases</a> </li>
+                    <li> <a href="#blog">Blog</a> </li>
+                    <li> <a href="#contact">Contact</a> </li>
                 </ul>
             </nav>
         </div>
@@ -120,7 +120,7 @@
                         <h4> April 12 2020 </h4>
                         <h2> Blog Post 1 </h2>
                         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nobis, at obcaecati quaerat porro eum animi distinctio blanditiis, fugit expedita nihil aspernatur quae numquam iure dolorum! Commodi vero repellendus voluptates? </p>
-                        <a class="btn btn-outline">
+                        <a class="btn btn-outline" href="blogs.html">
                             Read Our Blog
                         </a>
                     </div>
